--- a/forcustomers.html
+++ b/forcustomers.html
@@ -138,7 +138,7 @@ color:#F25C22; text-align:center; font-style:bold;}
   <li><a href="testimonials.html">testimonials</a></li>
 
 </ul>
-<a href="simplecart_packages.html"><img style="width:25px; z-index:1800; position:relative; left:39px;top:15px;" src="shopping.png"></a>
+<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:16px;" title="cloning packages" src="shopping.png"></a>
 
 
 <div id="title">
