--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ margin-left:50px;}
   <li><a href="testimonials.html">testimonials</a></li>
 
 </ul>
-<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:18px;" src="shopping.png"></a>
+<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:16px;" title="cloning packages" src="shopping.png"></a>
 
 <div id="were">
 <h2 id="subtitle">We're Human Cloning Specialists.</h2>
