--- a/whycloning.html
+++ b/whycloning.html
@@ -96,8 +96,7 @@ h1{font-size:2.5em;}
   <li><a href="testimonials.html">testimonials</a></li>
 
 </ul>
-<a href="simplecart_packages.html"><img style="width:25px; z-index:1800; position:relative; left:39px;top:15px;" src="shopping.png"></a>
-
+<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:16px;" title="cloning packages" src="shopping.png"></a>
 
 
 <div id="intro">
