--- a/aboutus.html
+++ b/aboutus.html
@@ -61,7 +61,7 @@
 position:absolute; top:370px;left:50px;width:100px;}
 #know{position:absolute; left:71px; top:390px; font-family:arial;font-size:0.7em;font-weight:bold; z-index:99;color:#777575;}
 
-#footer{ border-top-style: dashed; position:absolute; top:920px; }
+#footer{ border-top-style: dashed; position:absolute; top:920px; border-top-width: 1px;}
 #footer li{
 	list-style: none;
 	float: left; 
@@ -120,7 +120,7 @@ position:absolute; top:370px;left:50px;width:100px;}
   <li><a href="testimonials.html">testimonials</a></li>
 
 </ul>
-<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:16px;" title="cloning packages" src="shopping.png"></a>
+<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:18px;" title="cloning packages" src="shopping.png"></a>
 
 
 
