--- a/cloningprocedure.html
+++ b/cloningprocedure.html
@@ -73,7 +73,7 @@
       text-align: left;
       }
 
-#footer{ border-top-style: dashed; position:absolute; top:1580px; font-family:serif;}
+#footer{ border-top-style: dashed; position:absolute; top:1580px; border-top-width: 1px; font-family:serif;}
 #footer li {
 	list-style: none;
 	float: left; 
@@ -94,7 +94,7 @@
   <li><a href="testimonials.html">testimonials</a></li>
 
 </ul>
-<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:16px;" title="cloning packages" src="shopping.png"></a>
+<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:18px;" title="cloning packages" src="shopping.png"></a>
 
 
 
