--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 #success{position:relative; top: -200px; background-color:#4E4444;  color:white; font-size:1.2em; text-align: center; border-radius: 20px; padding:10px 0px 10px 0px;letter-spacing:3px; margin-right:50px;
 margin-left:50px;}
 
-#footer{ border-top-style: dashed; position:absolute; top:775px; }
+#footer{ border-top-style: dashed; position:absolute; top:775px;border-top-width: 1px; }
 #footer li{
 	list-style: none;
 	float: left; 
