--- a/simplecart_packages.html
+++ b/simplecart_packages.html
@@ -111,7 +111,7 @@
 #navbar li a:hover{color:red;}                  
     
 
-#footer{ border-top-style: dashed; position:absolute; top:403px; left:-40px;width:1400px;color:#666666;}
+#footer{ border-top-style: dashed; position:absolute; top:403px; left:-40px;width:1400px;color:#666666; border-top-width: 1px;}
 #footer li{
 	list-style: none;
 	float: left; 
