--- a/testimonials.html
+++ b/testimonials.html
@@ -49,7 +49,7 @@
 
 #navbar li a:hover{color:red;}	
 
-#footer{ border-top-style: dashed; position:absolute; top:1400px; }
+#footer{ border-top-style: dashed; position:absolute; top:1400px; border-top-width: 1px;}
 #footer li{
 	list-style: none;
 	float: left; 
@@ -99,7 +99,7 @@ border-radius: 20px; padding:10px 0px 10px 0px;letter-spacing:3px; margin-right:
   <li><a href="testimonials.html">testimonials</a></li>
 
 </ul>
-<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:16px;" title="cloning packages" src="shopping.png"></a>
+<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:18px;" title="cloning packages" src="shopping.png"></a>
 
 
 <div id="text">
