--- a/whycloning.html
+++ b/whycloning.html
@@ -50,7 +50,7 @@
 #navbar li a:hover{color:red;}
     
 
-#footer{ border-top-style: dashed; position:absolute; top:2270px; }
+#footer{ border-top-style: dashed; position:absolute; top:2270px; ;border-top-width: 1px;}
 #footer li{
 	list-style: none;
 	float: left; 
@@ -96,7 +96,7 @@ h1{font-size:2.5em;}
   <li><a href="testimonials.html">testimonials</a></li>
 
 </ul>
-<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:16px;" title="cloning packages" src="shopping.png"></a>
+<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:18px;" title="cloning packages" src="shopping.png"></a>
 
 
 <div id="intro">
