--- a/forcustomers.html
+++ b/forcustomers.html
@@ -72,7 +72,7 @@ text-decoration:none;
 	
 #lab{position:absolute; top:150px;width:345px;left:35px;}
 
-#footer{ border-top-style: dashed; position:absolute; top:2940px; }
+#footer{ border-top-style: dashed; position:absolute; top:2940px; border-top-width: 1px; }
 #footer li{
 	list-style: none;
 	float: left; 
@@ -138,7 +138,7 @@ color:#F25C22; text-align:center; font-style:bold;}
   <li><a href="testimonials.html">testimonials</a></li>
 
 </ul>
-<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:16px;" title="cloning packages" src="shopping.png"></a>
+<a href="simplecart_packages.html"><img style="width:16px; z-index:1800; position:relative; left:42px;top:18px;" title="cloning packages" src="shopping.png"></a>
 
 
 <div id="title">
